[package]
name = "learn_grpc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.9"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
